<resources>
    <string name="app_name">TiltToType</string>
    <string name="typing_hint">Start typing</string>
    <string name="setup_title">Setup</string>
    <string name="ok_button">OK</string>
    <string name="participant_code">Participant Code:</string>
    <string name="session_code">Session Code:</string>
    <string name="group_code">Group Code:</string>
    <string name="mode_select">Keyboard Mode:</string>
    <string name="tilt_mode">Tilt-to-Type</string>
    <string name="one_handed_mode">One-handed Keyboard</string>
</resources>