<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center_horizontal"
        android:text="@string/setup_title"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="32sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/participantText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right|center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/participant_code"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/participantSpin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:backgroundTint="?attr/colorButtonNormal"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:spinnerMode="dialog" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sessionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right|center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/session_code"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/sessionSpin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:backgroundTint="?attr/colorButtonNormal"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:spinnerMode="dialog" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/groupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right|center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/group_code"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/groupSpin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:backgroundTint="?attr/colorButtonNormal"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:spinnerMode="dialog" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/modeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/mode_select"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="26sp" />

            <RadioGroup
                android:id="@+id/modeRadio"
                android:layout_weight="1"
                android:checkedButton="@id/tiltMode">

                <RadioButton
                    android:id="@+id/tiltMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/tilt_mode"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/oneHandedMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/one_handed_mode"
                    android:textSize="22sp" />
            </RadioGroup>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/ok_button"
        android:textSize="26sp" />

</LinearLayout>